--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -1747,7 +1747,7 @@
   }
   .page-header {
     height: 60px;
-    padding: 12px 24px
+    padding: 12px 24px;
   }
   .ant-breadcrumb,
   .ant-layout-sider {
@@ -1763,11 +1763,10 @@
     display: none !important;
   }
   .header-right {
-   
     display: none !important;
   }
   .orders {
-    .ant-card-head{
+    .ant-card-head {
       padding: 10px 24px;
     }
     .ant-card-head-wrapper {
