--- a/src/screens/order-online/scss/index.screen.scss
+++ b/src/screens/order-online/scss/index.screen.scss
@@ -1,22 +1,4 @@
-.ant-table-content{
-  .ant-table-tbody {
-    .ant-table-row {
-      
-      .ant-table-cell .items {
-        .item {
-          display: flex;
-          .item-sku {
-            width: 80%
-          }
-          .item-quantity {
-            width: 20%;
-          }
-        }
-      }
-      
-    }
-  }
-}
+
 @import "assets/css/variable";
 .order-list {
   .txt-muted {
@@ -50,6 +32,41 @@
     width: 120px;
     text-align: center;
     white-space: unset;
+  }
+  
+  .ant-table-content{
+    .ant-table-tbody {
+      .ant-table-row {
+        
+        .ant-table-cell{
+
+          .items {
+            .item {
+              display: flex;
+              border-bottom: 1px solid #5252;
+              .item-sku {
+                width: 80%
+              }
+              .item-quantity {
+                width: 20%;
+              }
+            }
+            .item:last-child {
+              border-bottom: none;
+            }
+          }
+          .customer {
+            .name {
+              color: #2A2A86;
+            }
+          }
+        }
+        
+      }
+      .ant-table-row-selected {
+        background-color: #c45dbb !important;
+      }
+    }
   }
 }
 
