--- a/src/component/filter/order.filter.scss
+++ b/src/component/filter/order.filter.scss
@@ -51,6 +51,7 @@
           width: 100%;
           .ant-space-item {
             width: 100%;
+            
             .ant-form.ant-form-inline {
               display: flex;
               justify-content: space-between;
@@ -81,14 +82,19 @@
             }
           }
         }
+        .ant-collapse>.ant-collapse-item>.ant-collapse-header {
+          background-color: #f5f5f5;
+        }
       }
     }
   }
 }
 .order-filter-tags {
   .tag {
-    padding: 10px 5px;
+    padding: 10px 10px;
     margin-bottom: 20px;
+    background: rgba(42, 42, 134, 0.05);
+    border-radius: 50px;
   }
 }
 
