--- a/src/assets/css/_printer.scss
+++ b/src/assets/css/_printer.scss
@@ -8,3 +8,42 @@
     page-break-before: always;
   }
 }
+
+.ckeditor-table-border-dotted {
+  border: 1px dotted #000;
+  border-collapse: separate;
+  td {
+    border: none;
+    &:not(:last-child) {
+      border-right: 1px dotted #000;
+    }
+  }
+}
+
+.ckeditor-table-border-dashed {
+  border-style: dashed;
+}
+
+.ckeditor-table-border-bottom-dotted {
+  border-bottom: 1px dotted #000;
+}
+
+.ckeditor-table-border-bottom-dashed {
+  border-bottom-style: dashed;
+}
+
+.ckeditor-table-has-border {
+  td {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+.printContent {
+  table {
+    td {
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+  }
+}
