--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -196,6 +196,8 @@ label {
 @import "sale-order";
 @import "po";
 @import "printer";
+@import "inventory";
+@import "numberrange";
 
 .display {
   &-block {
