Ghi chú fpage - Customer

--- a/src/screens/fpage/fpage-customer/customer.scss
+++ b/src/screens/fpage/fpage-customer/customer.scss
@@ -206,3 +206,9 @@
     padding: 6px 24px 0 24px
   }
 }
+
+.customer-note-item {
+  background-color: #F5F5F5;
+  margin-top: 10px;
+  padding: 10px;
+}
