Fixbug customer Fpage

--- a/src/screens/fpage/fpage.index.scss
+++ b/src/screens/fpage/fpage.index.scss
@@ -4,6 +4,10 @@
     overflow-x: hidden !important;
     overflow-y: scroll;
   }
+  .fpage-recent-tag{
+    width: 100px;
+    border-radius: 100px
+  }
   .fpage-order-screen{
     .ant-row{
       margin-bottom: 4px !important;
