--- a/src/screens/fpage/fpage-customer/customer.scss
+++ b/src/screens/fpage/fpage-customer/customer.scss
@@ -211,4 +211,9 @@
   background-color: #F5F5F5;
   margin-top: 10px;
   padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 5px;
+  word-wrap: break-word;
+  word-break:break-all
 }
