--- a/src/component/filter/order.filter.scss
+++ b/src/component/filter/order.filter.scss
@@ -148,6 +148,11 @@
         }
       }
     }
+    .deactive {
+      color: #2a2a86;
+      border-color: rgba(42, 42, 134, 0.05);
+      background-color: rgba(42, 42, 134, 0.05);
+    }
   }
 }
 
