--- a/src/screens/fpage/fpage-customer/customer.scss
+++ b/src/screens/fpage/fpage-customer/customer.scss
@@ -209,7 +209,7 @@
 
 .customer-note-item {
   background-color: #F5F5F5;
-  margin-top: 10px;
+  margin-bottom: 10px;
   padding: 10px;
   display: flex;
   justify-content: space-between;
