--- a/src/screens/customer/customer.scss
+++ b/src/screens/customer/customer.scss
@@ -229,7 +229,9 @@
     margin: 0;
   }
 }
-
+.fw-500{
+  font-weight: 500;
+}
 .customer-create-info {
   padding: 0 16px 10px 0;
   display: flex;
