--- a/src/screens/customer/customer.scss
+++ b/src/screens/customer/customer.scss
@@ -204,7 +204,19 @@
     padding: 6px 24px 0 24px;
   }
 }
+.customer-tabs-detail{
+  margin-top: 20px;
+  .ant-tabs-nav{
+    padding: 0
+  }
+  .ant-card{
+    padding: 0 24px
+  }
+}
 .customer-info-detail {
+  .ant-tabs-nav{
+    padding: 0
+  }
   .ant-card-head {
     min-height: 0;
     padding: 8px 30px;
