--- a/src/screens/customer/customer.scss
+++ b/src/screens/customer/customer.scss
@@ -248,6 +248,12 @@
   }
 }
 .customer-history-table {
+  .ant-table-pagination-right{
+    align-items: center;
+    a{
+      padding-top: 2px;
+    }
+  }
   .ant-table-cell {
     padding: 6px 16px;
   }
