--- a/src/screens/fpage/fpage.index.scss
+++ b/src/screens/fpage/fpage.index.scss
@@ -8,6 +8,9 @@
     width: 100px;
     border-radius: 100px
   }
+  .ant-card-extra {
+    width: 100%;
+  }
   .fpage-order-screen{
     .ant-row{
       margin-bottom: 4px !important;
@@ -24,7 +27,13 @@
     }
   }
   .fpage-order-product{
+    .ant-card-head-wrapper{
+      .ant-card-extra{
+        width: 100%;
+      }
+    }
     .ant-card-head{
+      padding-top: 12px;
       .ant-row{
         justify-content: flex-end;
       }
@@ -255,5 +264,52 @@
   }
   .customer-field-label {
     font-weight: 500;
+  }
+}
+
+.fpage-order {
+  margin-bottom: 70px;
+
+  .ant-card {
+      margin-top: 5px;
+  }
+
+  .card-body {
+      padding: 12px 24px;
+  }
+
+  .note-input {
+      min-height: 130px;
+  }
+
+  .footer {
+      display: flex;
+      justify-content: space-between;
+      position: fixed;
+      width: 80%;
+      height: 55px;
+      bottom: 0;
+      margin: 10px -12px 5px -12px;
+      background-color: #FFFFFF;
+      z-index: 99999;
+
+      .order-step {
+          padding: 3px;
+          margin-left: -20px;
+          margin-top: 3px;
+      }
+
+      .order-button {
+          display: flex;
+          justify-content: space-between;
+          height: 100%;
+          box-shadow: 0px -1px 8px rgba(0, 0, 0, 0.1);
+          align-items: center;
+          padding: 0 32px;
+          background-color: white;
+          &-width {
+              width: 45%;
+          }
+      }
   }
 }
