Refact-css fpage order 2

--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -1498,7 +1498,7 @@
   min-width: 160px;
   border-radius: 4px;
   button {
-    font-weight: 400px;
+    font-weight: 400;
     background: transparent;
     border: none;
     width: 100%;
