--- a/src/screens/fpage/fpage.index.scss
+++ b/src/screens/fpage/fpage.index.scss
@@ -26,23 +26,6 @@
       margin-left: 8px !important;
     }
   }
-  .fpage-order-product{
-    .ant-card-head-wrapper{
-      .ant-card-extra{
-        width: 100%;
-      }
-    }
-    .ant-card-head{
-      padding-top: 12px;
-      .ant-row{
-        justify-content: flex-end;
-      }
-      .ant-space-item{
-        width: 50%;
-      }
-    }
-    
-  }
   .fpage-order-email {
     .ant-form-item-control {
       flex: 0 0 100% !important;
@@ -271,11 +254,46 @@
   margin-bottom: 70px;
 
   .ant-card {
-      margin-top: 5px;
+    margin-top: 5px;
   }
 
   .card-body {
       padding: 12px 24px;
+  }
+
+  .product {
+    .ant-card-head {
+      margin-top: 10px;
+    }
+    .select-price-type {
+      margin: 0;
+      width: 130px;
+    }
+    .product-content {
+      padding: 12px 24px 0px;
+    }
+    .product-table {
+      .total-text {
+        width: 40%;
+        float: left;
+        font-weight: 700;
+      }
+      .total-value-1 {
+        width: 40%;
+        text-align: center;
+      }
+      .total-value-2 {
+        width: 20%;
+        text-align: center;
+        font-weight: 700;
+      }
+    }
+    .product-payment {
+      padding: 12px 24px;
+      .payment-style {
+        justify-content: space-between;
+      }
+    }
   }
 
   .note-input {
@@ -311,5 +329,18 @@
               width: 45%;
           }
       }
+  }
+}
+
+.add-new-item-dropdown {
+  display: flex;
+  min-height: 42px;
+  line-height: 50px;
+  cursor: pointer;
+  .search-icon {
+    margin-left: 20px;
+  }
+  .text {
+    margin-left: 20px;
   }
 }
