--- a/src/screens/loyalty/loyalty.scss
+++ b/src/screens/loyalty/loyalty.scss
@@ -1,6 +1,14 @@
 .loyalty-programs-wrapper {
   color: #222222;
 
+  .add-new-btn {
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: 0.2px;
+    color: #2A2A86;
+    padding: 5px 8px;
+  }
+
   .d-flex {
     display: flex;
   }
@@ -14,6 +22,24 @@
 
   .global-config {
     margin-bottom: 54px;
+
+    .config-title {
+      flex: 1;
+    }
+
+    .status {
+      display: flex;
+      justify-content: space-between;
+      width: 240px;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 16px;
+      align-items: center;
+
+      .ant-switch-checked {
+        background: #27AE60;
+      }
+    }
 
     &__body {
       padding: 20px 30px;
@@ -82,6 +108,16 @@
     margin-top: 38px;
   }
 
+  .status-col {
+    &__ACTIVE {
+      color: #27AE60;
+    }
+
+    &__INACTIVE {
+      color: #E24343;
+    }
+  }
+
   .loyalty-programs {
     .priority {
       border-radius: 100px;
@@ -91,19 +127,12 @@
       color: white;
 
       &__VERY_HIGH {
-        background-color: #FF0000;
-      }
-
-      &__HIGH {
-        background-color: #FCAF17;
-      }
-
-      &__MEDIUM {
-        background-color: #5FCF06;
+        background-color: #E24343;
       }
 
       &__LOW {
-        background-color: #3CB9FF;
+        background-color: #F5F5F5;
+        color: #222222;
       }
     }
   }
