--- a/src/assets/css/_overwrite.scss
+++ b/src/assets/css/_overwrite.scss
@@ -511,7 +511,7 @@
     }
     &-item {
       padding: 5px 16px;
-      height: 38px;
+      // height: 38px;
       line-height: 2em;
       &-option {
         &-selected:not(.ant-select-item-option-disabled) {
