--- a/src/assets/css/_overwrite.scss
+++ b/src/assets/css/_overwrite.scss
@@ -437,6 +437,12 @@
         }
       }
     }
+    &-body {
+      height: auto;
+      opacity: 1;
+      padding: 0;
+      transition: all 0.1s;
+    }
   }
   //Select
   &-select {
@@ -511,7 +517,7 @@
     }
     &-item {
       padding: 5px 16px;
-      // height: 38px;
+      height: 38px;
       line-height: 2em;
       &-option {
         &-selected:not(.ant-select-item-option-disabled) {
