--- a/src/screens/loyalty/accumulate/loyalty-accumulate.scss
+++ b/src/screens/loyalty/accumulate/loyalty-accumulate.scss
@@ -78,10 +78,11 @@
     align-items: center;
     padding-left: 24px !important;
 
-    a {
+    div {
       color: #737373;
       display: flex;
       align-items: center;
+      cursor: pointer;
     }
 
     svg {
