--- a/src/assets/css/_overwrite.scss
+++ b/src/assets/css/_overwrite.scss
@@ -908,8 +908,8 @@
         border-color: $primary-color;
       }
       .ant-checkbox-inner {
-        // background-color: $primary-color;
-        // border-color: $primary-color;
+          background-color: $primary-color;
+          border-color: $primary-color;
       }
     }
     &-indeterminate {
