--- a/src/screens/fpage/fpage.index.scss
+++ b/src/screens/fpage/fpage.index.scss
@@ -8,6 +8,9 @@
     width: 100px;
     border-radius: 100px
   }
+  .customer-detail-icon{
+    margin-right: 8px;
+  }
   .ant-card-extra {
     width: 100%;
   }
@@ -251,6 +254,9 @@
 }
 
 .fpage-order {
+  .ant-table-cell{
+
+  }
   .ant-space-horizontal{
     width: 100%;
     justify-content: space-between;
