--- a/src/assets/css/_overwrite.scss
+++ b/src/assets/css/_overwrite.scss
@@ -838,6 +838,16 @@
     &-footer {
       border-radius: 0 0 5px 5px;
       // box-shadow: 0px -1px 6px rgba(82, 150, 199, 0.25);
+      &-nostyle { 
+        .ant-modal-footer {
+          display: none;
+        }
+      }
+    }
+    &-close-nostyle {
+      .ant-modal-close {
+        display: none;
+      }
     }
   }
   //Switch
