--- a/src/screens/loyalty/accumulate/detail/loyalty-accumulate-detail.scss
+++ b/src/screens/loyalty/accumulate/detail/loyalty-accumulate-detail.scss
@@ -51,7 +51,7 @@
 
     .info-content {
       font-weight: 500;
-      align-self: auto;
+      align-self: center;
 
       .load-products {
         font-style: italic;
