--- a/src/screens/loyalty/accumulate/loyalty-accumulate.scss
+++ b/src/screens/loyalty/accumulate/loyalty-accumulate.scss
@@ -64,6 +64,7 @@
       label {
         font-weight: 500;
         font-size: 14px;
+        color: #222222;
         line-height: 16px;
       }
     }
