--- a/src/screens/fpage/fpage.index.scss
+++ b/src/screens/fpage/fpage.index.scss
@@ -4,28 +4,36 @@
     overflow-x: hidden !important;
     overflow-y: scroll;
   }
-  .fpage-recent-tag{
-    width: 100px;
-    border-radius: 100px
+  .ant-input-suffix {
+    span {
+      line-height: 26px;
+      padding: 0 4px;
+      border-radius: 3px;
+      font-weight: 500;
+    }
   }
-  .customer-detail-icon{
+  .fpage-recent-tag {
+    width: 100px;
+    border-radius: 100px;
+  }
+  .customer-detail-icon {
     margin-right: 8px;
   }
   .ant-card-extra {
     width: 100%;
   }
-  .fpage-order-screen{
-    .ant-row{
+  .fpage-order-screen {
+    .ant-row {
       margin-bottom: 4px !important;
     }
   }
-  .point-spending{
+  .point-spending {
     padding: 0 !important;
-    .ant-input-number-input{
+    .ant-input-number-input {
     }
   }
-  .orders-shipment{
-    .radio-container{
+  .orders-shipment {
+    .radio-container {
       margin-left: 8px !important;
     }
   }
@@ -163,8 +171,8 @@
   .login {
     width: 400px !important;
   }
-  #ct-container{
-    top: 50px !important
+  #ct-container {
+    top: 50px !important;
   }
   .ant-form-item {
     flex-direction: row !important;
@@ -185,7 +193,7 @@
     }
   }
   .create-order-payment {
-    .ant-row{
+    .ant-row {
       margin: 0;
     }
     .ant-form-item {
@@ -254,13 +262,12 @@
 }
 
 .fpage-order {
-  .ant-table-cell{
-
+  .ant-table-cell {
   }
-  .ant-space-horizontal{
+  .ant-space-horizontal {
     width: 100%;
     justify-content: space-between;
-    .ant-form-item{
+    .ant-form-item {
       justify-content: flex-end;
     }
   }
@@ -269,7 +276,7 @@
   }
 
   .card-body {
-      padding: 12px 24px;
+    padding: 12px 24px;
   }
 
   .product {
@@ -308,38 +315,38 @@
   }
 
   .note-input {
-      min-height: 130px;
+    min-height: 130px;
   }
 
   .footer {
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    width: 80%;
+    height: 55px;
+    bottom: 0;
+    margin: 10px -12px 5px -12px;
+    background-color: #ffffff;
+    z-index: 99999;
+
+    .order-step {
+      padding: 3px;
+      margin-left: -20px;
+      margin-top: 3px;
+    }
+
+    .order-button {
       display: flex;
       justify-content: space-between;
-      position: fixed;
-      width: 80%;
-      height: 55px;
-      bottom: 0;
-      margin: 10px -12px 5px -12px;
-      background-color: #FFFFFF;
-      z-index: 99999;
-
-      .order-step {
-          padding: 3px;
-          margin-left: -20px;
-          margin-top: 3px;
+      height: 100%;
+      box-shadow: 0px -1px 8px rgba(0, 0, 0, 0.1);
+      align-items: center;
+      padding: 0 32px;
+      background-color: white;
+      &-width {
+        width: 45%;
       }
-
-      .order-button {
-          display: flex;
-          justify-content: space-between;
-          height: 100%;
-          box-shadow: 0px -1px 8px rgba(0, 0, 0, 0.1);
-          align-items: center;
-          padding: 0 32px;
-          background-color: white;
-          &-width {
-              width: 45%;
-          }
-      }
+    }
   }
 }
 
