--- a/src/screens/order-online/scss/index.screen.scss
+++ b/src/screens/order-online/scss/index.screen.scss
@@ -10,18 +10,18 @@
       width: 12px;
       height: 12px;
       border-radius: 50%;
-      border-color: $green;
+      border-color: rgb(42, 42, 134);
       border-width: 1px;
       border-style: solid;
     }
 
     &-full {
       @include round;
-      background-color: $green;
+      background-color: rgb(42, 42, 134);
     }
     &-partial {
       @include round;
-      background-image: linear-gradient(to right, $green 50%, $white 50%);
+      background-image: linear-gradient(to right, rgb(42, 42, 134) 50%, $white 50%);
     }
     &-blank {
       @include round;
