--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -265,13 +265,13 @@
         .ant-steps-item-tail {
           top: 11px !important;
           &::after {
-            background-color: #2a2a86;
+            background-color: #2a2a86 !important;
             margin-left: 10px !important;
           }
         }
         .ant-steps-icon-dot {
           color: $white;
-          background-color: #2a2a86 ;
+          background-color: #2a2a86 !important;
         }
       }
     }
