--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -244,7 +244,7 @@
           top: 11px !important;
           background-color: #2a2a86;
           &::after {
-            background-color: #2a2a86;
+            background-color: #2a2a86!important;
             margin-left: 10px !important;
           }
         }
