--- a/src/screens/loyalty-card/component/error-logs/error-logs.scss
+++ b/src/screens/loyalty-card/component/error-logs/error-logs.scss
@@ -1,4 +1,90 @@
 .error-logs-modal {
-  overflow-y: auto;
-  max-height: 500px;
+  font-family: Roboto;
+  .ant-modal-title {
+    font-weight: bold;
+    font-size: 18px;
+    color: #222222;
+  }
+
+  .ant-modal-header {
+    padding: 22px 30px;
+  }
+
+  .error-logs-body {
+    .ordinal-number {
+      width: 66px;
+      text-align: center;
+      align-self: center;
+    }
+
+    .error-content {
+      padding-left: 40px;
+      align-self: center;
+    }
+
+    &__header {
+      height: 48px;
+      font-weight: 500;
+      font-size: 14px;
+      color: #222222;
+      display: flex;
+      margin-left: 8px;
+      background: #F5F5F5;
+      box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
+
+      .column {
+        align-self: center;
+      }
+    }
+
+    &__body {
+      overflow-y: auto;
+      max-height: 350px;
+
+      .release-error {
+        display: flex;
+        margin-left: 8px;
+        box-shadow: 0px 1px 0px #E5E5E5;
+
+        div {
+          height: 52px;
+          padding: 18px 0;
+        }
+
+        .error-content {
+          width: 100%;
+          padding-left: 48px;
+        }
+      }
+    }
+  }
+
+  .no-error {
+    width: 100%;
+    text-align: center;
+    margin-top: 24px;
+  }
+
+  .ant-modal-footer {
+    padding-right: 24px;
+
+    button {
+      border: 1px solid #E5E5E5;
+      background-color: white;
+      color: #222222;
+
+      &:hover {
+        border-color: #2a2a86;
+      }
+    }
+  }
+
+  .error-summary {
+    margin: 0 0 15px 8px;
+    display: flex;
+
+    * {
+      align-self: center;
+    }
+  }
 }
