--- a/src/screens/loyalty/loyalty.scss
+++ b/src/screens/loyalty/loyalty.scss
@@ -66,7 +66,7 @@
       margin-bottom: 14px;
     }
 
-    .overflow-table {
+    &__table {
       overflow-x: scroll;
       overflow-y: hidden;
 
