--- a/src/assets/css/_product.scss
+++ b/src/assets/css/_product.scss
@@ -1,4 +1,4 @@
-.prodcut-image {
+.product-image {
   background-color: rgba($primary-color, 0.05);
   width: 40px;
   height: 40px;
@@ -27,10 +27,10 @@
     border-radius: 5px;
   }
   &:hover {
-    .prodcut-image-upload {
+    .product-image-upload {
       display: inline;
     }
-    .prodcut-image-default {
+    .product-image-default {
       display: none;
     }
   }
