--- a/src/screens/ranking/component/create/create-ranking.scss
+++ b/src/screens/ranking/component/create/create-ranking.scss
@@ -30,7 +30,7 @@
 
   .action-group {
     width: 100%;
-    padding-right: calc(35px + 2.4%) !important;
+    padding-right: 30px !important;
     display: flex;
     align-items: center;
     justify-content: flex-end;
