--- a/src/screens/fpage/fpage.index.scss
+++ b/src/screens/fpage/fpage.index.scss
@@ -4,13 +4,26 @@
     overflow-x: hidden !important;
     overflow-y: scroll;
   }
-  .ant-tabs-nav{
+  .ant-tabs-nav {
     padding: 0;
   }
-  .ant-tabs-nav::before{
+  .padding-lef-right{
+    padding: 0 24px 10px 24px
+  }
+  .fpage-order-avatar-customer {
+    border-radius: 50%;
+    background-color: #8f8f8f2e;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+  }
+  .ant-tabs-nav::before {
     border-bottom: none !important;
   }
-  .ant-tabs-nav-wrap{
+  .ant-tabs-nav-wrap {
     margin-bottom: 10px;
   }
   .ant-input-suffix {
