--- a/src/screens/fpage/fpage.index.scss
+++ b/src/screens/fpage/fpage.index.scss
@@ -4,6 +4,39 @@
     overflow-x: hidden !important;
     overflow-y: scroll;
   }
+  .container-login {
+    margin-bottom: 200px;
+    .login {
+      width: 440px !important;
+    }
+  }
+  .change-shipping-address-content{
+    width: 100%;
+    padding: 0
+  }
+  .shipping-customer-address{
+  }
+  .word-break-fpage{
+    word-wrap: break-word;
+    word-spacing: break-word;
+  }
+  .ant-popover-inner-content{
+    padding: 0
+  }
+  .ant-popover {
+    width: 100%;
+    padding: 0px 12px;
+    // .ant-popover-content {
+    //   width: 100%;
+    // }
+  }
+  .customer-shipping-address{
+    padding: 6px 12px;
+    border-bottom: 1px solid #d1d1db;
+    &:hover{
+      background-color: #e9e9e9
+    }
+  }
   .custom-fpage-tabs {
     .ant-tabs-nav {
       position: fixed;
@@ -16,6 +49,9 @@
     .ant-tabs-tab {
       width: 100%;
       justify-content: center;
+      border-bottom: 1px solid #e5e5e5;
+      margin: 0;
+      padding: 12px 0;
     }
   }
   .ant-tabs-nav {
@@ -99,9 +135,7 @@
       padding: 10px 20px;
     }
   }
-  .container-login {
-    margin-bottom: 200px;
-  }
+
   .create-order-payment .order-cod-payment-footer > span {
     line-height: 20px;
   }
@@ -190,9 +224,7 @@
       padding: 0 !important;
     }
   }
-  .login {
-    width: 400px !important;
-  }
+
   #ct-container {
     top: 50px !important;
   }
