--- a/src/assets/css/_sale-order.scss
+++ b/src/assets/css/_sale-order.scss
@@ -450,7 +450,7 @@
 .search-layout .ant-select-item {
   padding: 0;
   border-bottom: 1px solid #d9d9e4;
-  height: 70px;
+  height: 100%;
 }
 
 .search-layout-customer .ant-select-item {
@@ -1492,6 +1492,14 @@
       height: 28px;
     }
   }
+}
+
+.product-auto-complete{
+  
+}
+
+.ant-select-item-option-content{
+  white-space: normal;
 }
 
 .saleorders-product-dropdown {
