--- a/src/screens/customer/customer.scss
+++ b/src/screens/customer/customer.scss
@@ -123,9 +123,8 @@
     }
   }
   .ant-table-body {
-    .ant-table-measure-row{
-
-      td{
+    .ant-table-measure-row {
+      td {
         background-color: red;
         padding-left: 0 !important;
       }
@@ -137,16 +136,16 @@
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
     }
-    .ant-table-tbody{
-      tr > td{
+    .ant-table-tbody {
+      tr > td {
         padding: 10px 15px !important;
       }
-      tr:first-child{
+      tr:first-child {
         td {
           padding: 0 !important;
         }
-      } 
-    } 
+      }
+    }
     &::-webkit-scrollbar {
       // width: 12px;
       height: 8px;
@@ -218,18 +217,18 @@
     padding: 6px 24px 0 24px;
   }
 }
-.customer-tabs-detail{
+.customer-tabs-detail {
   margin-top: 20px;
-  .ant-tabs-nav{
-    padding: 0
+  .ant-tabs-nav {
+    padding: 0;
   }
-  .ant-card{
-    padding: 0 24px
+  .ant-card {
+    padding: 0 24px;
   }
 }
 .customer-info-detail {
-  .ant-tabs-nav{
-    padding: 0
+  .ant-tabs-nav {
+    padding: 0;
   }
   .ant-card-head {
     min-height: 0;
@@ -248,9 +247,42 @@
   }
 }
 .customer-history-table {
-  .ant-table-pagination-right{
+  .text-center {
+    text-align: center;
+    .icon-partial {
+      display: inline-block;
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      border-color: #2a2a86;
+      border-width: 1px;
+      border-style: solid;
+      background-image: linear-gradient(to right, #2a2a86 50%, #ffffff 50%);
+    }
+    .icon-full {
+      display: inline-block;
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      border-color: #2a2a86;
+      border-width: 1px;
+      border-style: solid;
+      background-color: #2a2a86;
+    }
+    .icon-blank {
+      display: inline-block;
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      border-color: #2a2a86;
+      border-width: 1px;
+      border-style: solid;
+      background-color: #ffffff;
+    }
+  }
+  .ant-table-pagination-right {
     align-items: center;
-    a{
+    a {
       padding-top: 2px;
     }
   }
@@ -261,7 +293,7 @@
     margin: 0;
   }
 }
-.fw-500{
+.fw-500 {
   font-weight: 500;
 }
 .customer-create-info {
@@ -270,7 +302,7 @@
   justify-content: flex-end;
   align-items: center;
   width: 100%;
-  color: #2A2A86;
+  color: #2a2a86;
   .customer-create-info-btn {
     display: flex;
     justify-content: flex-end;
@@ -278,4 +310,3 @@
     cursor: pointer;
   }
 }
-
