--- a/src/assets/css/_overwrite.scss
+++ b/src/assets/css/_overwrite.scss
@@ -87,10 +87,19 @@
         .ant {
           &-menu {
             background-color: $sider-color;
+            &-submenu-title{
+              .ant-menu-title-content{
+                margin-left: 13px;
+              }
+            }
             &-item {
               height: 40px;
               line-height: 40px;
               color: $white;
+              padding-left: 16px !important;
+              .ant-menu-title-content{
+                margin-left: 13px;
+              }
               a {
                 color: $white;
               }
@@ -152,6 +161,9 @@
                   vertical-align: middle;
                 }
               }
+            }
+            .ant-menu-submenu-title {
+              padding-left: 16px !important;
             }
             &-submenu {
               padding: 0;
@@ -838,7 +850,7 @@
     &-footer {
       border-radius: 0 0 5px 5px;
       // box-shadow: 0px -1px 6px rgba(82, 150, 199, 0.25);
-      &-nostyle { 
+      &-nostyle {
         .ant-modal-footer {
           display: none;
         }
@@ -918,8 +930,8 @@
         border-color: $primary-color;
       }
       .ant-checkbox-inner {
-          background-color: $primary-color;
-          border-color: $primary-color;
+        background-color: $primary-color;
+        border-color: $primary-color;
       }
     }
     &-indeterminate {
